# gemGIF

./: .gitignore  README.md
agihouse-hackathon/: README.md  api.py  main.py
backend/: .env  Dockerfile  docker-compose.yml  main.py  requirements.txt
frieda-backend/: main.py  pyproject.toml
frontend/: .prettierrc  .windsurfrules  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/public/: animation.lottie
frontend/src/app/: actions.ts  animation.json  animation2.json  context.md  globals.css  layout.tsx  page.tsx
frontend/src/components/motion/: fade.tsx
frontend/src/components/ui/: button.tsx  input.tsx
